rename nuclear king
rename nuclear king to tsar bomba

--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@ const translations = {
         ring: "Королева Верблюдов",
         crown: "Королева Коней",
         queen_upgradeable: "Ферзь V2",
-        tnt: "Ядерный Король",
+        tnt: "Царь бомба",
         spartan: "Спартанец",
         super_runner: "Супер Бегун",
         camel_knight: "Коне-Верблюд",
