--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@ const translations = {
         ring: "Королева Верблюдов",
         crown: "Королева Коней",
         queen_upgradeable: "Ферзь V2",
-        tnt: "Царь бомба",
+        tnt: "Царь Бомба",
         spartan: "Спартанец",
         super_runner: "Супер Бегун",
         camel_knight: "Коне-Верблюд",
@@ -775,9 +775,9 @@ const translations = {
         ghost_desc: "проходит сквозь 1 фигуру",
         two_color_bishop_desc: "слон + король",
         swap_bishop_desc: "Меняется местами с фигурами своего цвета",
-        tank_desc: "ладья + диагональ (1)",
+        tank_desc: "ладья + король",
         car_desc: "ладья + проходит сквозь 1 фигуру",
-        statue_desc: "ходит на любую клетку доски",
+        statue_desc: "ходит на любую свободную клетку доски, не может быть съедена",
         ring_desc: "ферзь + верблюд",
         crown_desc: "ферзь + конь",
         queen_upgradeable_desc: "эволюционирует дальше",
@@ -785,16 +785,16 @@ const translations = {
         spartan_desc: "копейщик + бегун",
         super_runner_desc: "ходит как король",
         camel_knight_desc: "конь + верблюд",
-        endless_knight_desc: "слайд конем (∞)",
-        moose_desc: "конь + вертикаль (1) и горизонталь (1)",
+        endless_knight_desc: "слайд конем",
+        moose_desc: "конь + король",
         nuke_bishop_desc: "взрыв (3x3)",
         sniper_desc: "проходит сквозь 2 фигуры",
         ship_desc: "конь + слон",
         helicopter_desc: "ладья + конь",
-        rocket_desc: "ладья + проходит сквозь 2 фигуры",
+        rocket_desc: "проходит сквозь 2 фигуры",
         unicorn_desc: "ферзь + конь + верблюд",
-        pin_desc: "ферзь + проходит сквозь 2 фигуры",
-        range_desc: "ферзь + дальняя атака",
+        pin_desc: "проходит сквозь 2 фигуры",
+        range_desc: "дальняя атака",
         // Settings
         settings: "Настройки",
         language: "Язык",
